# ccg-scanner-gtk2

./: .gitignore  Makefile.am  NEWS  README.md  configure.ac
docker/: my.sql  run-server.sh
pics/: magic_card1
pics/icons/: Sets.ods  geticons.sh
pics/plains/: 1375i};-52  Pia};-50  Plains-78
src/: CCG_Scanner-gtk2.cpp  Card.cpp  Card.h  CardLibrary.cpp  CardLibrary.h  CardScanner.cpp  CardScanner.h  Database text interp.txt  FullDatabase23-10-2014-create.sql  MainWindow.cpp  MainWindow.h  Makefile.am  Picture.cpp  Picture.h  output.txt.txt  testsql.txt  testsql2.txt  utf8data.txt
src/examples/: CannyDetector.cpp  DispatcherExample.cpp  ExampleWindow.cpp  ExampleWindow.h  ExampleWorker.cpp  ExampleWorker.h  FaceDetection.cpp  FindObject.cpp  MagicDatabase.cpp  MagicDatabase.h  Makefile.am  SquareDetection.cpp  TextDetection1.cpp  ThreadExample.cpp  example.cpp  snap.cpp  tesscv.cpp  test.cpp  test.py
src/examples/WebCamFun/: FaceDetection  Smile  Smile.cpp
